[project]
name = "acm122"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alan Wu", email = "lunw1024@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "cvxpy>=1.4.1",
    "pandas>=2.1.3",
    "icecream>=2.1.3",
    "tqdm>=4.66.1",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "ipykernel>=6.27.1",
    "nbformat>=5.9.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
